# ctk-wopi

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  function_app.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: deploy.yaml  dockerhub_deploy.yaml
public/: discovery.xml
src/: azure.ts  logging.ts  server.ts
src/ctk-wopi/: algorithms.py
src/ctk_wopi/: azure.py  config.py
tests/: test_fibonacci.py
tests/smoke/: test_function_app.py
